--- a/nikl.css
+++ b/nikl.css
@@ -4,19 +4,19 @@
   padding: 0;
 }
 
-body {
-  margin: 0;
+main {
+  margin: 0 auto;
   font-family: "Arial", sans-serif;
   background-color: #fff;
   color: #111;
-  width: 100vw;
+  max-width: 1248px;
 }
 header {
   background: #111;
   color: white;
   display: flex;
   align-items: center;
-  max-width: 90vw;
+  max-width: 100vw;
   justify-content: space-between;
   padding: 15px 30px;
 }
@@ -54,7 +54,7 @@ nav a:hover {
     center/cover no-repeat;
   height: 70vh;
   display: flex;
-  width: 90vw;
+  width: 100%;
   overflow: hidden;
   align-items: center;
   justify-content: center;
@@ -62,6 +62,7 @@ nav a:hover {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   flex-direction: column;
   padding: 0;
+  margin: 60px 0;
 }
 .hero h1 {
   font-size: 48px;
@@ -88,7 +89,7 @@ nav a:hover {
 .products {
   max-width: 1200px;
   margin: 50px auto;
-  padding: 0 20px;
+  padding: 30px 20px;
   display: flex;
   gap: 30px;
   overflow-x: scroll;
@@ -98,7 +99,7 @@ nav a:hover {
   text-align: center;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 /* Track */
@@ -108,7 +109,7 @@ nav a:hover {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #f3b3b3;
 }
 
 /* Handle on hover */
@@ -116,10 +117,10 @@ nav a:hover {
   background: #555;
 }
 .product-card {
-  border: 1px solid #ddd;
-  border-radius: 10px;
+  border: none;
+  border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgb(0 0 0 / 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
   background: white;
   min-width: 250px;
